--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,16 @@
 *.coveragerc
 
 # End of https://www.gitignore.io/api/database
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
+# End of https://www.gitignore.io/api/visualstudiocode
